--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ site.title }}</title>
+    <title>Dr Lauren Scott</title>
     <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
 </head>
 <body>
     <header>
         <nav>
-            <h1>{{ site.title }}</h1>
+            <h1>Dr Lauren Scott</h1>
             <ul>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
