--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,14 @@
 <body>
     <header>
         <nav>
-            <h1>Dr Lauren Scott</h1>
-            <ul>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+            <nav>
+    <h1><a href="/">Dr Lauren Scott</a></h1>
+    <ul>
+        <li><a href="/about">About</a></li>
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/research">Research</a></li>
+    </ul>
+</nav>
         </nav>
     </header>
     
